# 3D-MPC-Inspection-Satellite

./: .env.example  .gitignore  .gitignore 2  .pre-commit-config.yaml  ARCHITECTURE.md  CHANGELOG.md  CHANGES.md  CLAUDE.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  MANIFEST.in  MATHEMATICS.md  Makefile  PHYSICS-ENGINE.md  README 2.md  README.md  SECURITY.md  Start_Mission_Control.command  _check_acados_init.py  _check_acados_json.py  _check_dump.py  _check_reuse.py  _check_weights.py  _diag2.py  _diag3.py  _diag4.py  _diag5_s_advance.py  _diag6_settle.py  _prime_acados_cache.py  _test_fix.py  final_dare2.txt  final_dare_test.txt  final_physics_test.txt  final_sim_test.txt  final_test.txt  mkdocs 2.yml  mkdocs.yml  (+13 more)
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci 2.yml  ci.yml
.hypothesis/constants/: 01db11807ffdb07d  075fec62e7c9d6de  09d09a386c1dd7f6  1122f62708cf6a6f  24b0e3777139f2d5  27edca9ea1c818fd  2d174ff0c80ca991  3107e67cb3bfcf6d  3d51f2bd2715a4d6  45edafd6a393cb97  46e6159f093c6e9f  4991df95c8c452fc  4f6c9a1b199f5011  4ff407fcc5153eca  5167aad4fb4faa38  520d69f9f15adb30  524bf46c9b6984e4  540ffd3910d95a86  58337f475edcbd1b  5fc7bbadb5b190c4  6357eaecf52d9ec8  655e5e04c4988386  6a9b9fe31fbaba63  6ec53cb9cb087e81  6fc75b50691f995e  76152573c3d4274a  7d066b041d8eea28  7de41443429dcb77  7e69949452e6b9d5  85af320b7eabcd78  85b278a2f8f9f6d0  8766209f11a12587  8cbac7458592719d  92059725ae248681  93d7caa7d987e13a  97f8e8d6d5e438f2  9d4a89e9b7b67620  a1de508ec01aca8a  a36647a83da12f80  b10df5d9fc79904c  (+20 more)
MATH/: README.md  cpp_hybrid_rti_osqp.md  cpp_linearized_rti_osqp.md  cpp_nonlinear_fullnlp_ipopt.md  cpp_nonlinear_rti_hpipm.md  cpp_nonlinear_rti_osqp.md  cpp_nonlinear_sqp_hpipm.md
assets/paths/: ISS2m.json  Starlink_1.0m.json  Starlink_2.0m.json  Starlink_3.0m.json  Starlink_Scan_Along_Long_Axis.json  Starlink_Y-axis.json  auto_compiled_STARLINK-1008.json
assets/scan_projects/: TestScanProject_Multi.json  TestScanProject_Single 2.json  TestScanProject_Single.json
assets/ui/: app.js  index.html  style.css
codegen_cache/cpp_nonlinear_rti_hpipm/: acados_ocp.json  ocp_hash.txt
codegen_cache/cpp_nonlinear_sqp_hpipm/: acados_ocp.json  ocp_hash.txt
controller/: __init__.py  cli.py  exceptions.py  factory.py  registry.py
controller/acados_rti/: profile_parameters.json
controller/acados_sqp/: profile_parameters.json
controller/configs/: __init__.py  constants.py  defaults.py  models.py  paths.py  physics.py  simulation_config.py  timing.py  validator.py
controller/hybrid/: __init__.py  profile_parameters.json
controller/linear/: __init__.py  profile_parameters.json
controller/nmpc/: profile_parameters.json
controller/nonlinear/: __init__.py  profile_parameters.json
docs/: ARCHITECTURE.md  ASSET_ATTRIBUTION.md  BENCHMARKING.md  BUILDING_DOCS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONFIG_MIGRATION_GUIDE.md  CONTRIBUTING.md  DEVELOPMENT_GUIDE.md  FAQ.md  HOW_TO_USE.md  LOCAL_USER_READY_CHECKLIST.md  LOGGING.md  MATHEMATICS.md  MIGRATION.md  QUICKSTART.md  RELEASE_V4.md  SIMULATION.md  TESTING.md  THIRD_PARTY_NOTICES.md  TROUBLESHOOTING.md  V2_MIGRATION.md  VISUALIZATION.md  api.md  conf.py  developer-guide.md  github-launch-checklist.md  index.md  index.rst  physics.md  user-guide.md
docs/api/: control.rst  core.rst  utils.rst  (+1 more)
missions/: 1Turn.json  Circle_Test.json  DoubleSpiral.json  MissionConflict.json  MissionKeep.json  MissionOverwrite.json  Mission_V2.json  README.md  STARLINK-1008_M2_202602182335.json  STARLINK-1008_M2_202602182348.json  STARLINK-1008_M2_202602190001.json  STARLINK-1008_M2_202602191258.json  STARLINK-1008_M2_202602201649.json  STARLINK-1008_M4_202602191817.json  STARLINK-1008_M4_202602192117.json  STARLINK-1008_M4_202602192133.json  SimpleSway.json  SpiralNoEnd.json  SpiralTest-Small.json  SpiralTest.json  SpiralWithEnd.json  Starlink-FullScan.json  Starlink-Scan.json  Starlink-V1.json  Starlink.json  Starlink05m.json  Starlink15m.json  Starlink20m.json  Starlink2mScan.json  Starlink_Scan_M00.json  Starlink_Scan_M01.json  Starlink_Scan_M02.json  Starlink_Scan_M102.json  Starlink_Scan_M15.json  Starlink_Scan_M16 2.json  Starlink_Scan_M16 3.json  Starlink_Scan_M18.json  StraightLine.json  Studio_1path_202603081401.json
missions_unified/: Starlink_Scan_M04.json  Starlink_Scan_M09.json  Starlink_Scan_M12.json  Starlink_Scan_M14.json  Starlink_Scan_M15.json  Starlink_Scan_M17.json  TestMission1.json  latest_preview.json
scripts/: Start_Mission_Control.command  build_profile_run_config.py  build_pyinstaller_bundle.py  check_markdown_links.py  check_v6_cutover_readiness.py  compare_simulations.py  migrate_missions_v1_to_v2.py  packaged_entrypoint.py  run_dashboard.py  run_mpc_quality_suite.py  run_mpc_sweep.py  run_simulation.py  smoke_test_packaged_app.py  start_app.py  validate_fairness_contract.py
tests/: README.md  conftest.py  test_acados_profile_behavior.py  test_benchmark.py  test_caching.py  test_compare_simulations.py  test_config.py  test_control_loop.py  test_controller_factory.py  test_controller_metadata_artifacts.py  test_controller_profile_migration.py  test_controller_shared_contract.py  test_cpp_integration.py  test_cutover_readiness.py  test_dashboard.py  test_dashboard_api.py  test_data_logger.py  test_e2e_simulation.py  test_engine_utils.py  test_factories.py  test_import_smoke.py  test_integration_basic.py  test_integration_missions.py  test_integration_refactored.py  test_linear_profile_behavior.py  test_math.py  test_mission_saving.py  test_mission_state_manager.py  test_mission_state_refactor.py  test_mission_workflow.py  test_missions_api.py  test_missions_v2_api.py  test_mpc.py  test_mpc_controller.py  test_mpc_controller_path.py  test_mpc_monte_carlo.py  test_mpc_sweep.py  test_mpc_v2.py  test_mpcc_test_paths.py  test_navigation_utils.py  (+41 more)
ui/: README.md  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  vite.config.ts  vitest.config.ts
(+664 files in other folders)
