[build-system]
requires = ["scikit-build-core>=0.3.3", "pybind11", "ninja>=1.10"]
build-backend = "scikit_build_core.build"

[project]
name = "satellite_control"
version = "4.0.0b1"
authors = [
  { name = "Aevar Ofjord", email = "aevar@ofjord.com" },
]
description = "Satellite MPC Control System"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11,<3.12"
keywords = ["satellite", "mpc", "simulation", "fastapi", "threejs", "orbital-dynamics"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
    # Core numerical
    "numpy>=1.21.0",
    "scipy>=1.7.0",

    # Configuration
    "pydantic>=2.0.0",
    "pyyaml>=6.0.0",

    # CLI and interface
    "typer>=0.9.0",
    "rich>=10.0.0",
    "questionary>=2.0.0",

    # Data processing
    "pandas>=1.3.0",
    "matplotlib>=3.4.0",
    "seaborn>=0.11.0",

    # Visualization
    "plotly>=5.0.0",
    "imageio>=2.30.0",
    "imageio-ffmpeg>=0.4.9",
    "shapely>=1.8.0",

    # Optimization
    "osqp>=0.6.0",
    "casadi>=3.6.0",

    # Web dashboard
    "uvicorn>=0.20.0",
    "fastapi>=0.100.0",
    "websockets>=10.0.0",
    "watchfiles>=0.19.0",
    "httpx>=0.24.0",
    "python-multipart>=0.0.6",
    "aiofiles>=23.0.0",
    "tqdm>=4.66.0",
    "psutil>=5.9.0",
]

[project.urls]
Homepage = "https://github.com/AevarOfjord/Satellite_3D_PWM-Continuous_Thrusters_ReactionWheel"
Repository = "https://github.com/AevarOfjord/Satellite_3D_PWM-Continuous_Thrusters_ReactionWheel"
Issues = "https://github.com/AevarOfjord/Satellite_3D_PWM-Continuous_Thrusters_ReactionWheel/issues"
Documentation = "https://github.com/AevarOfjord/Satellite_3D_PWM-Continuous_Thrusters_ReactionWheel/tree/main/docs"
Changelog = "https://github.com/AevarOfjord/Satellite_3D_PWM-Continuous_Thrusters_ReactionWheel/blob/main/CHANGES.md"

[project.scripts]
satellite-control = "controller.cli:app"

[project.optional-dependencies]
dev = [
    "black>=23.0.0",
    "hypothesis>=6.0.0",
    "pre-commit>=3.0.0",
    "pytest-benchmark>=4.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
]
docs = [
    "mkdocs-material>=9.5.0",
    "mkdocstrings[python]>=0.24.0",
]
release = [
    "pyinstaller>=6.0.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["controller*"]


[tool.scikit-build]
cmake.version = ">=3.20"
cmake.build-type = "Release"
cmake.args = ["-DCMAKE_POLICY_VERSION_MINIMUM=3.5"]
wheel.packages = ["controller"]
# Setup for development install (editable)
editable.rebuild = true
build-dir = "build/{wheel_tag}"
# Exclude non-C++ dirs from source scan (avoids iCloud-duplicated node_modules hanging)
# Exclude non-C++ dirs from source scan (avoids iCloud-duplicated node_modules hanging)
sdist.exclude = [
    "ui/",
    "ui/node_modules/",
    "model_files/",
    "data/",
    "Data/",
    "docs/",
    "tests/",
    "missions/",
    "missions_unified/",
    "logs/",
    "scripts/",
    ".venv311/",
    ".github/",
    ".pytest_cache/",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --tb=short"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "e2e: end-to-end tests",
    "benchmark: performance benchmarks",
]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = [
    "E501",  # line length handled by ruff-format; comments/strings may exceed
    "E402",  # module-level imports after try/except C++ blocks are intentional
]
